# kapalo-py

./: .copier-answers.yml  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  Inference.ipynb  README.rst  dodo.py  flake.nix  kapalo.sql  kapalo_sql.ipynb  mapconfig.ini  noxfile.py  pyproject.toml  requirements.txt  styles.css  tasks.py
.github/workflows/: test-and-publish-doit.yaml  test-and-publish.yaml
data/: kurikka.geojson  kurikka_bedrock.geojson
docs_src/: conf.py  index.rst  requirements.txt
docs_src/apidoc/: kapalo_py.cli.rst  kapalo_py.export.rst  kapalo_py.filter_rules.rst  kapalo_py.kapalo_map.rst  kapalo_py.logger.rst  kapalo_py.observation_data.rst  kapalo_py.rst  kapalo_py.schema_inference.rst  kapalo_py.utils.rst  modules.rst
examples/: README.rst
kapalo_py/: __init__.py  __main__.py  cli.py  export.py  filter_rules.py  kapalo_map.py  logger.py  observation_data.py  schema_inference.py  utils.py
notebooks/: Untitled.ipynb
tests/: __init__.py  _profile.py  conftest.py  test_cli.py  test_export.py  test_kapalo_map.py  test_utils.py
tests/sample_data/: kapalo.sqlite  kapalo.sqlite.backup  sample_declination_config.ini  sample_lineaments.geojson  sample_mapconfig.ini  sample_mapconfig_kurikka.ini  styles.css
tests/sample_data/kapalo_sql/: kapalo_NO_17052021.sqlite
tests/test_export/: test_export_projects_to_geodataframes_kapalo_sqlite_path0_projects0_config_path0_False_.yml
tests/test_kapalo_map/: test_create_project_map_path0_projects0_None_None_.yml
