[tool.poetry]
name = "kapalo_py"
version = "0.0.0"
description = "Kapalo data extraction and processing"
authors = ["nialov <nikolasovaskainen@gmail.com>"]

[tool.poetry.dependencies]
python = "3.8.*"

# Extras
# Coverate
coverage = {version = "*", optional = true}
coverage-badge = {version = "*", optional = true}

# Docs
sphinx = {version = "*", optional = true}
sphinx-rtd-theme = {version = "*", optional = true}
nbsphinx = {version = "*", optional = true}

# Linting and formatting
pylint = {version = "*", optional = true}
rstcheck = {version = "*", optional = true}
black = {version = "*", optional = true}
black-nb = {version = "*", optional = true}
isort = {version = "*", optional = true}
pandas = "^1.2.4"
pandera = "^0.6.3"
geopandas = "^0.9.0"
folium = "^0.12.1"
matplotlib = "^3.4.1"
pdvega = "^0.1"
Markdown = "^3.3.4"
tabulate = "^0.8.9"
typer = "^0.3.2"

[tool.poetry.dev-dependencies]
nox = "*"
invoke = "*"
jupyterlab = "*"
ipython = "*"
pytest = "*"

[tool.poetry.extras]
coverage = ["coverage", "coverage-badge"]
docs = ["sphinx", "sphinx-rtd-theme", "nbsphinx"]
format-lint = ["pylint", "rstcheck", "sphinx", "black", "black-nb", "isort"] 

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry.core.masonry.api"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"

[tool.pytest.ini_options]
testpaths =[
    "tests",
    "kapalo_py",
    ]
addopts = "--doctest-modules --pdbcls=IPython.terminal.debugger:Pdb"
doctest_optionflags =[
    "NUMBER",
    "NORMALIZE_WHITESPACE",
    ]

filterwarnings =[]

[tool.isort]
profile = "black"
multi_line_output = 3
src_paths = ["kapalo_py", "tests"]

[tool.pylint."FORMAT"]
max-line-length = 100

[tool.pylint."REPORT"]
output-format = "text"
