[tool.poetry]
name = "kapalo-py"
version = "0.0.0.post51.dev0+d643664"
description = "Kapalo data extraction and processing"
authors = ["nialov <nikolasovaskainen@gmail.com>"]
readme = "README.rst"
license = "MIT"
# Make sure hyphens/underscores are correct in urls
homepage = "https://github.com/nialov/kapalo-py"
repository = "https://github.com/nialov/kapalo-py"
documentation = "https://kapalo-py.readthedocs.io/en/latest/"
# For inspiration: https://pydigger.com/keywords
keywords = [
    "data",
]
# See https://pypi.org/classifiers/
classifiers = [
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering :: GIS"
]
include = ["CHANGELOG.md", "styles.css"]

[tool.poetry.scripts]
kapalo-py = "kapalo_py.cli:app"

[tool.poetry.dependencies]
python = ">=3.8,<3.10.0"
geopandas = "~0.9.0"
pandas = "~1.2.4"
typer = "0.3.2"
pillow = "~8.2.0"
pandera = "^0.6.3"
folium = "^0.12.1"
matplotlib = "^3.4.1"
pdvega = "^0.1"
Markdown = "^3.3.4"
tabulate = "^0.8.9"
scikit-learn = "^0.24.2"
seaborn = "^0.11.1"
plotly = "^4.14.3"

# Extras
# Coverage
coverage = {version = "*", optional = true}
coverage-badge = {version = "*", optional = true}

# Docs
sphinx = {version = "*", optional = true}
sphinx-rtd-theme = {version = "*", optional = true}
nbsphinx = {version = "*", optional = true}
sphinx-gallery = {version = "*", optional = true}
sphinx-autodoc-typehints = {version = "*", optional = true}

# Linting and formatting
pylint = {version = "*", optional = true}
rstcheck = {version = "*", optional = true}
black = {version = "*", optional = true}
black-nb = {version = "*", optional = true}
blacken-docs = {version = "*", optional = true}
blackdoc = {version = "*", optional = true}
isort = {version = "*", optional = true}

# Typecheck
mypy = {version = "*", optional = true}
apsg = {git = "https://www.github.com/ondrolexa/apsg.git"}
pygeos = "^0.10.2"

[tool.poetry.dev-dependencies]
nox = "*"
invoke = "*"
jupyterlab = "*"
ipython = "*"
pytest = "*"
pre-commit = "*"

[tool.poetry.extras]
coverage = ["coverage", "coverage-badge"]
docs = [
    "sphinx",
    "sphinx-rtd-theme",
    "nbsphinx",
    "sphinx-gallery",
    "sphinx-autodoc-typehints"
]
format-lint = [
    "pylint",
    "rstcheck",
    "sphinx",
    "black",
    "black-nb",
    "isort",
    "blacken-docs",
    "blackdoc"
]
typecheck = ["mypy"]

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry.core.masonry.api"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"

[tool.poetry-dynamic-versioning.substitution]
files = [
    "*.py",
    "*/__init__.py",
    "*/__version__.py",
    "*/_version.py",
    "./CITATION.cff",
]
patterns = [
    "(^__version__\\s*=\\s*['\"])[^'\"]*(['\"])",
    "(^version:\\s*['\"])[^'\"]*(['\"])",
]

[tool.pytest.ini_options]
testpaths =[
    "tests",
    "kapalo_py",
    ]
addopts = "--doctest-modules --pdbcls=IPython.terminal.debugger:Pdb"
doctest_optionflags =[
    "NUMBER",
    "NORMALIZE_WHITESPACE",
    ]

filterwarnings =[]

[tool.isort]
profile = "black"
multi_line_output = 3
src_paths = ["kapalo_py", "tests"]

[tool.pylint.master]
fail-under = "9.5"

[tool.pylint.report]
output-format = "text"

[tool.pylint.messages_control]
max-line-length = 90
disable = [
    "C0103",
    "C0302",
    "R0902",
    "R0913",
    "R0914",
    "R1735",
    "W0212",
    "W0621",
    "W0703",
    "W1202",
    "W1203",
    ]

[tool.pylint.similarities]
ignore-imports = true

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
