[tool.poetry]
name = "kapalo-py"
version = "0.0.0.post178.dev0+4838d08"
description = "Kapalo data extraction and processing"
authors = ["nialov <nikolasovaskainen@gmail.com>"]
readme = "README.rst"
license = "MIT"
# Make sure hyphens/underscores are correct in urls
homepage = "https://github.com/nialov/kapalo-py"
repository = "https://github.com/nialov/kapalo-py"
documentation = "https://kapalo-py.readthedocs.io/en/latest/"
# For inspiration: https://pydigger.com/keywords
keywords = [
    "data",
]
# See https://pypi.org/classifiers/
classifiers = [
    "Topic :: Scientific/Engineering :: GIS",
    "Programming Language :: Python :: 3 :: Only"
]
include = ["CHANGELOG.md", "styles.css"]

[tool.poetry.scripts]
kapalo-py = "kapalo_py.cli:APP"

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
geopandas = "~0.11.0"
pandas = "~1.4.2"
typer = "~0.4.1"
folium = "~0.12.1"
Markdown = "~3.3.7"
tabulate = "~0.8.10"
Pillow = "~9.1.1"
pandera = "~0.11.0"
python-json-logger = "~2.0.2"
markdown-captions = "^2.1.2"

# Extras
# Coverage
coverage = {version = "*", optional = true}
coverage-badge = {version = "*", optional = true}

# Docs
sphinx = {version = "*", optional = true}
sphinx-rtd-theme = {version = "*", optional = true}
nbsphinx = {version = "*", optional = true}
sphinx-gallery = {version = "*", optional = true}
sphinx-autodoc-typehints = {version = "*", optional = true}
sphinx-autobuild = {version = "*", optional = true}

# Linting
pylint = {version = "*", optional = true}
rstcheck = {version = "*", optional = true}
markupsafe = {version = "*", optional = true}

# Typecheck
mypy = {version = "*", optional = true}

[tool.poetry.dev-dependencies]
# TODO: copier could be installed outside the poetry environment
copier = "*"
colorama = "*"
hypothesis = "*"
doit = "*"
ipython = "*"
jupyterlab = "*"
nox = "*"
pre-commit = "*"
pyinstrument = "*"
pytest = "*"
toml = "*"
pytest-regressions = "*"
coverage = "^6.5.0"
codespell = "^2.2.2"

[tool.poetry.extras]
coverage = ["coverage", "coverage-badge"]
docs = [
    "sphinx",
    "sphinx-rtd-theme",
    "nbsphinx",
    "sphinx-gallery",
    "sphinx-autodoc-typehints",
    "sphinx-autobuild"
]
lint = [
    "pylint",
    "rstcheck",
    "sphinx",
    "markupsafe",
]
typecheck = ["mypy"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths =[
    "tests",
    "kapalo_py",
    ]
addopts = "--doctest-modules"
doctest_optionflags =[
    "NUMBER",
    "NORMALIZE_WHITESPACE",
    ]

filterwarnings =[]

[tool.isort]
profile = "black"
multi_line_output = 3
src_paths = ["kapalo_py", "tests"]

[tool.pylint.master]
fail-under = "9.5"

[tool.pylint.report]
output-format = "text"

[tool.pylint.messages_control]
max-line-length = 100
disable = [
    "C0103",
    "C0302",
    "R0902",
    "R0913",
    "R0914",
    "R1735",
    "W0212",
    "W0621",
    "W0703",
    "W1202",
    "W1203",
    ]

[tool.pylint.similarities]
ignore-imports = true

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
